@@ -2,9 +2,9 @@
   Colors
  */
 
-$color-primary: #3B234A !default;
-$color-secondary: #BAAFC4 !default;
-$color-edit: #75ad0a !default;
+$color-primary: #2980b9 !default;
+$color-secondary: #c0def1 !default;
+$color-edit: #2abb67 !default;
 
 $color-default: #2980b9 !default;
 $color-success: #21ba45 !default;
@@ -12,11 +12,11 @@ $color-warning: #eab055 !default;
 $color-danger: #db2828 !default;
 
 $color-white: #fff !default;
-$color-gray-dark: #e6e6e6 !default;
-$color-gray-light: #f5f5f5 !default;
+$color-gray-dark: #bdc3C7 !default;
+$color-gray-light: #f1f3f3 !default;
 
-$color-text: #444 !default;
-$color-text-inverted: #efefef !default;
+$color-text: #2c3e50 !default;
+$color-text-inverted: #ecf0f1 !default;
 $color-text-light: #95a5a6 !default;
 
 $color-link: $color-primary !default;
